src/main/java/com/example/petfinder/error/exception/validation/EmailValidationException.java
package com.example.petfinder.error.exception.validation;

public class EmailValidationException extends RuntimeException {
    public EmailValidationException(String email) {
        super("Email is not valid: " + email);
    }
}
